[Shadow DOM]: crash in WebCore::ElementShadow::setValidityUndetermined https://bugs.webkit.org/show_bug.cgi?id=106203

Reviewed by Hajime Morita.

InsertionPoint should check whether ElementShadow is available or not
before invoking its methods.

No new tests. Webcomponents_fuzzer reported this bug. Would like to
use the fuzzer to check this issue.

* html/shadow/InsertionPoint.cpp:
(WebCore::InsertionPoint::getDistributedNodes):
(WebCore::InsertionPoint::childrenChanged):
(WebCore::InsertionPoint::insertedInto):
Added ifs to check whether ElementShadow is available or not before
invoking ElementShadow's methods, i.e. setValidityUndetermined,
invalidateDistribution, and ensureDistributionDocument.


Canonical link: https://commits.webkit.org/124392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138923 268f45cc-cd09-0410-ab3c-d52691b4dbfc